@@ -36,10 +36,6 @@
     <filter-class>org.apache.solr.servlet.SolrDispatchFilter</filter-class>
     <!--
     <init-param>
-      <param-name>handle-select</param-name>
-      <param-value>true</param-value>
-    </init-param>
-    <init-param>
       <param-name>path-prefix</param-name>
       <param-value>/xxx</param-value>
     </init-param>
